--- a/public/reset-password.html
+++ b/public/reset-password.html
@@ -17,6 +17,12 @@
   <div class="max-w-md w-full mx-4 p-6 bg-gray-800 rounded-lg border border-green-400">
     <h1 class="text-2xl font-bold text-green-400 mb-6 text-center">Reset Your Password</h1>
     
+    <div class="mb-4 p-3 bg-yellow-900 border border-yellow-600 rounded-lg">
+      <p class="text-yellow-200 text-sm">
+        ⚠️ <strong>ATTENTION:</strong> If you didn't receive the reset email, please check your Gmail spam folder!
+      </p>
+    </div>
+    
     <div id="loading" class="text-center">
       <p>Processing reset request...</p>
     </div>
