--- a/public/admin.html
+++ b/public/admin.html
@@ -10,14 +10,16 @@
 </head>
 <body class="bg-background text-text font-inter">
   <div class="container mx-auto p-6">
-    <h1 className="text-3xl font-bold text-primary mb-8">Admin Panel</h1>
-    <div id="orders" className="space-y-4"></div>
+    <h1 class="text-3xl font-bold text-primary mb-8">Admin Panel</h1>
+    <div id="orders" class="space-y-4"></div>
+    <div id="error" class="text-red-500 mt-4"></div>
   </div>
   <script>
     const supabaseUrl = 'https://dlzpktmtxcbknpulwnzp.supabase.co';
     const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRsenBrdG10eGNia25wdWx3bnpwIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTQxNzgyNjEsImV4cCI6MjA2OTc1NDI2MX0.0paajBHMgqsZHEfufMglEtyqGMDaJBDx2YBfvsR2p-M';
-    const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
+    const supabase = Supabase.createClient(supabaseUrl, supabaseKey);
     const ADMIN_TOKEN = 'YOUR_ADMIN_TOKEN'; // Replace with JWT from approve-order function
+    const errorDiv = document.getElementById('error');
 
     async function loadOrders() {
       try {
@@ -44,13 +46,14 @@
           ordersDiv.appendChild(div);
         });
       } catch (error) {
-        console.error('Error fetching orders:', error);
+        console.error('Error loading orders:', error);
         document.getElementById('orders').innerHTML = `<p class="text-red-500">Error loading orders: ${error.message}</p>`;
       }
     }
 
     async function approveOrder(orderId) {
       try {
+        console.log('Approving order ID:', orderId); // Debug log
         const response = await fetch('https://dlzpktmtxcbknpulwnzp.supabase.co/functions/v1/approve-order', {
           method: 'POST',
           headers: {
@@ -59,12 +62,17 @@
           },
           body: JSON.stringify({ order_id: orderId })
         });
+        if (!response.ok) {
+          const result = await response.json();
+          throw new Error(result.error || `HTTP error! status: ${response.status}`);
+        }
         const result = await response.json();
-        if (!response.ok) throw new Error(result.error || 'Failed to approve order');
+        console.log('Approval response:', result); // Debug log
         alert('Order approved!');
         loadOrders();
       } catch (error) {
-        alert('Error approving order: ' + error.message);
+        console.error('Approval error:', error);
+        errorDiv.textContent = `Error approving order: ${error.message}`;
       }
     }
 
